fix overflow hover card productos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -131,7 +131,11 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 0.3rem; }
 
 .img-container:hover .image {
   opacity: 0.2; }
