--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 0.3rem;
 }
 
 .img-container:hover .image {
